--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,16 @@
 {
-    "name": "Laravel Package Tutorial",
+    "name": "PiggyLearn",
     "short_name": "LPT",
     "start_url": "/index.php",
     "background_color": "#6777ef",
     "description": "Tutorial of Laravel Package",
     "display": "fullscreen",
-    "theme_color": "#6777ef",
+    "theme_color": "#000",
     "icons": [
         {
-            "src": "logo.PNG",
+            "src": "PorquinhoLogo.svg",
             "sizes": "512x512",
-            "type": "image/png",
+            "type": "image/svg",
             "purpose": "any maskable"
         }
     ]
